objects/Deferment_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deferment__c</fullName>
        <label>Deferment</label>
        <referenceTo>Deferment__c</referenceTo>
        <relationshipLabel>Deferment Approvals</relationshipLabel>
        <relationshipName>Deferment_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>first_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>first approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>second_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>second approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>third_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>third approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Deferment Approval</label>
    <nameField>
        <displayFormat>DA#{000000}</displayFormat>
        <label>Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferment Approvals</pluralLabel>
    <recordTypes>
        <fullName>Credit_Sanctioner</fullName>
        <active>true</active>
        <label>Credit Sanctioner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal</fullName>
        <active>true</active>
        <label>Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Specialist</fullName>
        <active>true</active>
        <label>Product Specialist</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>